--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
 </head>
 <title>첫 페이지~</title>
 <body>
-<h1>첫 페이지입니당~!</h1>
-<p>히히히히 무슨말을 적을까?</p>
+    <span>회원가입</span>
+
+    <div>
+        <span>아이디</span>
+        <input placeholder="아이디를 입력하세요."/>
+    </div>
+
+    <div>
+        <span>비밀번호</span>
+        <input placeholder="비밀번호를 입력하세요."/>
+    </div>
+    <button>완료</button>
 </body>
 </html>
