회원가입, 로그인 페이지 추가

--- a/login/index.html
+++ b/login/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
 </head>
-<title>회원가입 페이지~</title>
+<title>로그인 페이지~</title>
 <body>
-<span>회원가입</span>
+<span>로그인</span>
 
 <div>
     <span>아이디</span>
@@ -16,7 +16,7 @@
     <span>비밀번호</span>
     <input class="pw" placeholder="비밀번호를 입력하세요."/>
 </div>
-<button onclick="register()">완료</button>
+<button onclick="login()">완료</button>
 </body>
 <script src="./index.js"></script>
 </html>
