--- a/login/index.html
+++ b/login/index.html
@@ -17,6 +17,7 @@
     <input class="pw" placeholder="비밀번호를 입력하세요."/>
 </div>
 <button onclick="login()">완료</button>
+<button onclick="location.href='/register'">회원가입</button>
 </body>
 <script src="./index.js"></script>
 </html>
