--- a/index.html
+++ b/index.html
@@ -3,19 +3,10 @@
 <head>
     <meta charset="utf-8">
 </head>
-<title>첫 페이지~</title>
+<title>웹 게시판</title>
 <body>
-    <span>회원가입</span>
-
-    <div>
-        <span>아이디</span>
-        <input placeholder="아이디를 입력하세요."/>
-    </div>
-
-    <div>
-        <span>비밀번호</span>
-        <input placeholder="비밀번호를 입력하세요."/>
-    </div>
-    <button>완료</button>
+    <h1>웹 게시판</h1>
+    <button onclick="location.href='/login'">로그인</button>
+    <button onclick="location.href='/register'">회원가입</button>
 </body>
 </html>
