--- a/login/index.html
+++ b/login/index.html
@@ -14,7 +14,7 @@
 
 <div>
     <span>비밀번호</span>
-    <input class="pw" placeholder="비밀번호를 입력하세요."/>
+    <input class="pw" placeholder="비밀번호를 입력하세요." type="password"/>
 </div>
 <button onclick="login()">완료</button>
 <button onclick="location.href='/register'">회원가입</button>
