--- a/register/index.html
+++ b/register/index.html
@@ -14,7 +14,7 @@
 
 <div>
     <span>비밀번호</span>
-    <input class="pw" placeholder="비밀번호를 입력하세요."/>
+    <input class="pw" placeholder="비밀번호를 입력하세요." type="password"/>
 </div>
 <button onclick="register()">완료</button>
 </body>
