--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
 </head>
 <title>웹 게시판</title>
 <body>
-    <h1>웹 게시판</h1>
-    <button onclick="location.href='/login'">로그인</button>
-    <button onclick="location.href='/register'">회원가입</button>
+
+    <header>
+        <span class="welcome__message">로그인이 필요한 서비스입니다.</span>
+        <button class="login__btn" onclick="location.href='/login'">로그인</button>
+        <button class="register__btn" onclick="location.href='/register'">회원가입</button>
+        <button class="logout__btn" hidden>로그아웃</button>
+    </header>
+
+    <section>
+        <ul class="board__list">
+            <li><a href="/">가입했습니다.</a></li>
+            <li><a href="/">가입인사 드립니다.</a></li>
+            <li><a href="/">안녕하세요 :)</a></li>
+            <li><a href="/">여기가 그 유명한 찌니 커뮤니티 맞나요?</a></li>
+            <li><a href="/">[공지] 커뮤니티 "찌니" 오픈</a></li>
+        </ul>
+    </section>
 </body>
+<script src="./index.js"></script>
 </html>
