로그아웃 API 구현

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <span class="welcome__message">로그인이 필요한 서비스입니다.</span>
         <button class="login__btn" onclick="location.href='/login'">로그인</button>
         <button class="register__btn" onclick="location.href='/register'">회원가입</button>
-        <button class="logout__btn" hidden>로그아웃</button>
+        <button class="logout__btn" onclick="logout()" hidden>로그아웃</button>
     </header>
 
     <section>
